                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 18-01-2006 fixed: Chat Console text should be all the right colour now.
 - 18-01-2006 fixed: Webserver crash with GetCurrentPlaying.
 - 17-01-2006 fixed: Crash in My Music Playlist window when new files are queued via another thread (web, python etc.)
 - 17-01-2006 fixed: Toggle buttons didn't show text when selected.
 - 17-01-2006 fixed: 720p or higher video playback with Hardware overlay renderer when GUI was 480p or lower.
 - 17-01-2006 fixed: Label2 alignment in listcontrols (including python)
 - 16-01-2006 fixed: Visibility reset due to home page fading from the code (affected The Orbs and CEOMR skins).
 - 16-01-2006 fixed: Skin reload from a button/action from a dialog.
 - 16-01-2006 fixed: Console control wasn't rendering any text.
 - 16-01-2006 fixed: Hidden Keyboard input wasn't working 100%
 - 16-01-2006 fixed: [ 1311457 ] ID3v2.2 embedded album art.
 - 16-01-2006 changed: my music and videos now playing no longer has any restriction on item movement, you can even the currently playing item
 - 16-01-2006 fixed: crash in dvdplayer if demux stream changed during playback
 - 16-01-2006 changed: more media window base class work (moved some common msgs, consolidated OnClick)
 - 16-01-2006 fixed: progress dialog sometimes shows "Programs" in all lines
 - 16-01-2006 fixed: progress dialog sometimes does not fade in
 - 16-01-2006 fixed: music database reorg takes care of album thumbs
 - 15-01-2006 added: settings->video->subtitles, option to look for subs in rars, defaults to off because it causes lots of caching
 - 15-01-2006 changed: Rewrote window manager code to better track the window history.